Revert "Merge branch 'master' into tuan"
This reverts commit 7bc8c956cdd8d70920d7c9ba699c24cc3bb9b327, reversing
changes made to 50f974130f624b4e9e23241a8c8d53d5e644e042.

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,7 +24,6 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "jest": "^29.6.1"
+    "nodemon": "^3.1.10"
   }
 }
