--- a/frontend/driver-app/package.json
+++ b/frontend/driver-app/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
@@ -22,6 +24,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
