Sua lai trang qli driver,cap nhat giao dien driver va sua lich trinh driver

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "import-db": "node scripts/import_db.js",
     "test": "jest"
   },
   "keywords": [],
