--- a/frontend/parent-app/package.json
+++ b/frontend/parent-app/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.18.0",
     "zustand": "^4.4.6"
   },
